# labrador-app

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
docker/: Dockerfile.android  Dockerfile.linux
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/android/: MainActivity.kt
src-tauri/src/: auth.rs  gemini.rs  github.rs  keychain.rs  lib.rs
src/lib/: CameraView.svelte  DoneView.svelte  PreviewView.svelte  ProcessingView.svelte  PrsView.svelte  SettingsView.svelte  ShareView.svelte  stores.ts  tauri.ts
